# manx

./: .gitignore  PRD.md  README.md  config.example.toml  go.mod  pyproject.toml  setup.py
cmd/manx/: main.go
internal/manx/: cli.go  collectors.go  llm.go  llm_test.go  parser.go  parser_test.go  redact.go  render.go  risk.go  risk_test.go  util.go
src/manx/: __init__.py  __main__.py  cards.py  cli.py  collectors.py  config.py  llm.py  parser.py  redact.py  render.py  risk.py  sysinfo.py
src/manx/commands/: __init__.py  ask.py  base.py  cmd.py  explain.py  fix.py  option.py
src/manx/data/: errors.json  scenarios.json
src/manx/data/cards/: chmod.json  chown.json  curl.json  find.json  grep.json  journalctl.json  kill.json  ls.json  ps.json  rm.json  ss.json  systemctl.json  tar.json
tests/: test_parser.py  test_risk.py
